Fix social icons connecting line on mobile

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -27,7 +27,7 @@
 			position: relative;
 			margin-top: 3.5rem;
 
-			&:before {
+			&:not(#headerSocialIcons):before {
 				content: '';
 				display: block;
 				position: absolute;
